styles/game-over.module.scss
@import "./variables";

.gameOver {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;

  h1,
  h2,
  h3 {
    margin-bottom: 0;
  }

  $score-margin: 30px;

  .scoresWrapper {
    margin-top: $score-margin;
    display: flex;
    justify-content: space-evenly;

    .score {
      display: inline-block;

      &:last-child {
        margin-left: 20px;
      }
    }
  }

  .shareAction {
    color: $link-hover;
    margin-top: 1rem;
    margin-bottom: $score-margin;
    cursor: pointer;
    text-decoration: underline;
  }

  .buttons {
    display: flex;

    > button {
      &:not(:last-child) {
        margin-right: 10px;
      }
    }
  }
}

